--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorAllocatedOPDRoom/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorAllocatedOPDRoom/_List.cshtml
@@ -26,7 +26,7 @@
                             <td>@item.MedicalSpecilization</td>
                             <td>@item.RoomName</td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?hospitalDoctorId=@item.HospitalDoctorId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>
+                                <a href="../@controllerName/Edit?hospitalDoctorId=@item.HospitalDoctorId&hospitalDoctorAllocatedOPDRoomId=@item.HospitalDoctorAllocatedOPDRoomId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>
                             </td>
                         </tr>
                     }
