--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuildingRooms/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuildingRooms/CreateEdit.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = Model.OrganisationCentrewiseBuildingRoomId > 0 ? "Update Building" : "Add Building ";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
-    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "CentreCode", DropdownSelectedValue = Model.CentreCode, ChangeEvent = "OrganisationCentrewiseBuildingRooms.GetOrganisationCentrewiseBuildingByCentreCode()", IsDisabled = Model.OrganisationCentrewiseBuildingRoomId > 0};
+    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "OrganisationCentrewiseBuildingRooms.GetOrganisationCentrewiseBuildingByCentreCode()", IsDisabled = Model.OrganisationCentrewiseBuildingRoomId > 0 };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -32,9 +32,9 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.SelectedCentreCode, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
-                                        @Html.ValidationMessageFor(x => x.CentreCode)
+                                        @Html.ValidationMessageFor(x => x.SelectedCentreCode)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
@@ -45,7 +45,7 @@
                                    DropdownType = DropdownTypeEnum.CentrewiseBuilding.ToString(),
                                    DropdownName = "OrganisationCentrewiseBuildingMasterId",
                                    DropdownSelectedValue = Model.OrganisationCentrewiseBuildingMasterId.ToString(),
-                                   Parameter = Model.CentreCode
+                                   Parameter = Model.SelectedCentreCode
                                })
                                         @Html.ValidationMessageFor(x => x.OrganisationCentrewiseBuildingMasterId)
                                     </div>
