--- a/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryProductDimensionGroup/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryProductDimensionGroup/List.cshtml
@@ -12,7 +12,7 @@
                 <div class="card">
                     <div class="card-header">
                         <span class="card-title">@AdminResources.LabelInventoryProductDimensionGroupList</span>
-                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add InventoryProductDimensionGroup</a>
+                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Product Dimension Group</a>
                         
                     </div>
                     <div class="card-body">
