--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralUserMainMenu/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralUserMainMenu/CreateEdit.cshtml
@@ -3,6 +3,8 @@
     ViewBag.Title = Model.UserMainMenuMasterId > 0 ? "Update UserMainMenu" : "Add UserMainMenu";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
+    DropdownViewModel moduleDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.ModuleList.ToString(), DropdownName = "ModuleCode", DropdownSelectedValue = Model.ModuleCode, ChangeEvent = "UserMainMenu.GetParentMemuCodeByModuleCode()" };
+    DropdownViewModel menuDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.MenuList.ToString(), DropdownName = "ParentMenuCode", DropdownSelectedValue = Model.ParentMenuCode, Parameter = Model.ModuleCode, ChangeEvent = "", IsRequired = false };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -15,11 +17,11 @@
                             <div class="col">
                                 @if (Model.UserMainMenuMasterId > 0)
                                 {
-                                    <h4 class="card-title">Update UserMainMenu</h4>
+                                    <h4 class="card-title">Update User Main Menu</h4>
                                 }
                                 else
                                 {
-                                    <h4 class="card-title">Create UserMainMenu</h4>
+                                    <h4 class="card-title">Create User Main Menu</h4>
                                 }
                             </div><!--end col-->
                         </div>  <!--end row-->
@@ -32,20 +34,62 @@
                                 <div class="col-lg-3">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.MenuName, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.MenuName, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.MenuName, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.MenuName)
                                     </div>
                                 </div>
                                 <div class="col-lg-3">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.MenuCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.MenuCode, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.MenuCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
                                         @Html.ValidationMessageFor(x => x.MenuCode)
                                     </div>
                                 </div>
                                 <div class="col-lg-3">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.MenuDisplaySeqNo, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.ModuleCode, new { @class = "form-label required" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", moduleDropdown)
+                                        @Html.ValidationMessageFor(x => x.ModuleCode)
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.ParentMenuCode, new { @class = "form-label" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", menuDropdown)
+                                        @Html.ValidationMessageFor(x => x.ParentMenuCode)
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.MenuToolTip, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.MenuToolTip, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.MenuToolTip)
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.MenuIconName, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.MenuIconName, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.MenuIconName)
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.ControllerName, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.ControllerName, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.ControllerName)
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.ActionName, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.ActionName, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.ActionName)
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.MenuDisplaySeqNo, new { @class = "form-label" })
                                         @Html.TextBoxFor(x => x.MenuDisplaySeqNo, new { @class = "form-control", type = "number" })
                                         @Html.ValidationMessageFor(x => x.MenuDisplaySeqNo)
                                     </div>
@@ -55,6 +99,14 @@
                                         @Html.LabelFor(x => x.MenuInstalledFlag, new { @class = "form-label" })
                                         <div class="form-check">
                                             @Html.CheckBoxFor(x => x.MenuInstalledFlag, new { @class = "form-check-input" })
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.IsEnable, new { @class = "form-label" })
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.IsEnable, new { @class = "form-check-input" })
                                         </div>
                                     </div>
                                 </div>
@@ -68,3 +120,4 @@
         </div>
     </div>
 </div>
+<script src="~/js/coditech/general/usermainmenu.js"></script>
