--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralUserMainMenu/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralUserMainMenu/_List.cshtml
@@ -19,15 +19,15 @@
                     {
                         <tr>
                             <td>@item.MenuName</td>
-                            <td>@item.ParentMenuName</td>
+                            <td>@item.ParentMenuCode</td>
                             <td>@item.ModuleCode</td>
                             <td>@item.MenuDisplaySeqNo</td>
                             <td>
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsEnable)
                             </td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?generalCountryId=@item.UserMainMenuMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?countryIds=@item.UserMainMenuMasterId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                <a href="../@controllerName/Edit?userMainMenuMasterId=@item.UserMainMenuMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="../@controllerName/Delete?userMainMenuMasterIds=@item.UserMainMenuMasterId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     }
