--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralUserMainMenu/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralUserMainMenu/_List.cshtml
@@ -22,6 +22,7 @@
                             <td>@item.ParentMenuCode</td>
                             <td>@item.ModuleCode</td>
                             <td>@item.MenuDisplaySeqNo</td>
+                            <td style="text-align:center"><i class="@item.MenuIconName"></i></td>
                             <td>
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsEnable)
                             </td>
