--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralUserMainMenu/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralUserMainMenu/_List.cshtml
@@ -19,6 +19,7 @@
                     {
                         <tr>
                             <td>@item.MenuName</td>
+                            <td>@item.MenuCode</td>
                             <td>@item.ParentMenuCode</td>
                             <td>@item.ModuleCode</td>
                             <td>@item.MenuDisplaySeqNo</td>
