--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberBodyMeasurement/GymMemberBodyMeasurement.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberBodyMeasurement/GymMemberBodyMeasurement.cshtml
@@ -26,18 +26,19 @@
                     </div>
                     <div class="card-body">
                         <div class="row">
+                            <!-- Inside the foreach loop where you're iterating over GymMemberBodyMeasurementList -->
                             @foreach (var item in Model.GymMemberBodyMeasurementList)
                             {
                                 <div class="col-lg-4">
                                     <div class="card">
                                         <div class="card-body">
                                             <div id="DataTablesDivId_@item.GymBodyMeasurementTypeId" class="dataTables_wrapper dt-bootstrap5 no-footer">
-                                                <table id="datatable" class="action-set table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
+                                                <table id="datatable_@item.GymMemberBodyMeasurementId" class="action-set table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
                                                     <thead>
                                                         <tr role="row">
-                                                            <th colspan="2" class="px-1">
+                                                            <th colspan="3" class="px-1">
                                                                 @item.BodyMeasurementType
-                                                                <a data-bs-toggle="modal" data-bs-target="#@addGymMemberBodyMeasurementModel.ModelPopUpId" href="void javascritp(0)" onclick="GymMemberDetails.AddGymMemberBodyMeasurement('@addGymMemberBodyMeasurementModel.ModalContentId','@Model.GymMemberDetailId','@item.GymBodyMeasurementTypeId','@item.BodyMeasurementType','@item.MeasurementUnitShortCode','@Model.PersonId')" title="Add @item.BodyMeasurementType" class="btn btn-sm btn-soft-success btn-circle float-end"><i class="fas ti-plus"></i></a>
+                                                                <a data-bs-toggle="modal" data-bs-target="#@addGymMemberBodyMeasurementModel.ModelPopUpId" href="void javascritp(0)" onclick="GymMemberDetails.AddGymMemberBodyMeasurement('@addGymMemberBodyMeasurementModel.ModalContentId','@Model.GymMemberDetailId','@item.GymBodyMeasurementTypeId','@item.GymMemberBodyMeasurementId','@item.BodyMeasurementType','@item.MeasurementUnitShortCode','@Model.PersonId')" title="Add @item.BodyMeasurementType" class="btn btn-sm btn-soft-success btn-circle float-end"><i class="fas ti-plus"></i></a>
                                                             </th>
                                                         </tr>
                                                         @if (item.GymMemberBodyMeasurementValueList?.Count > 0)
@@ -45,6 +46,7 @@
                                                             <tr role="row">
                                                                 <th>Date</th>
                                                                 <th>@item.BodyMeasurementType</th>
+                                                                <th style="width: 5px;">Action</th>
                                                             </tr>
                                                         }
                                                     </thead>
@@ -56,6 +58,12 @@
                                                                 <tr>
                                                                     <td>@value.CreatedDate.ToShortDateString()</td>
                                                                     <td>@value.BodyMeasurementValue @value.MeasurementUnitShortCode</td>
+                                                                    <td>
+                                                                        <div class="d-flex justify-content-start">
+                                                                            <a data-bs-toggle="modal" data-bs-target="#@addGymMemberBodyMeasurementModel.ModelPopUpId" href="void javascritp(0)"
+                                                                               onclick="GymMemberDetails.AddGymMemberBodyMeasurement('@addGymMemberBodyMeasurementModel.ModalContentId','@Model.GymMemberDetailId','@item.GymBodyMeasurementTypeId','@value.GymMemberBodyMeasurementId','@item.BodyMeasurementType','@item.MeasurementUnitShortCode','@Model.PersonId')" title="Update @item.BodyMeasurementType" class="btn btn-sm btn-soft-success btn-circle float-end"><i class="fas fa-edit"></i></a>
+                                                                        </div>
+                                                                    </td>
                                                                 </tr>
                                                             }
                                                         }
@@ -70,6 +78,7 @@
                                     </div>
                                 </div>
                             }
+
                         </div>
                     </div>
                 </div>
