--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorLeaveSchedule/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorLeaveSchedule/CreateEdit.cshtml
@@ -6,7 +6,7 @@
     DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "CoditechCommon.GetDepartmentByCentreCode()", IsDisabled = Model.HospitalDoctorId > 0 };
     DropdownViewModel departmentDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseDepartment.ToString(), DropdownName = "SelectedDepartmentId", DropdownSelectedValue = Convert.ToString(Model.SelectedDepartmentId), Parameter = Model.SelectedCentreCode, ChangeEvent = "CoditechCommon.GetHospitalDoctorsListByCentreCodeAndDepartmentId()" };
 
-    string displayFromTimeDiv = Model.IsFullDay ? "display:block" : "display:none";
+    string displayFromTimeDiv = Model.IsFullDay ? "display:none" : "display:block";
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -33,14 +33,14 @@
                         {
                             @Html.HiddenFor(m => m.HospitalDoctorLeaveScheduleId)
                             <div class="row">
-                                <div class="col-lg-4">
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.SelectedCentreCode, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
                                         @Html.ValidationMessageFor(x => x.SelectedCentreCode)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.SelectedDepartmentId, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", departmentDropdown)
@@ -53,7 +53,7 @@
                                 }
                                 else
                                 {
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-6">
                                         <div class="mb-3">
                                             @Html.LabelFor(x => x.HospitalDoctorId, new { @class = "form-label required " })
                                             @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
@@ -70,14 +70,14 @@
                                     </div>
 
                                 }
-                                <div class="col-lg-4">
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.LeaveDate, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.LeaveDate, new { @class = "form-control", @readonly = "true" })
                                         @Html.ValidationMessageFor(x => x.LeaveDate)
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-1">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.IsFullDay, new { @class = "form-label required" })
                                         <div class="form-check">
@@ -85,28 +85,25 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="col-lg-2 FromUptoTimeDivId">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.FromTime, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.FromTime, new { @class = "form-control form-time", type = "time" })
+                                        @Html.ValidationMessageFor(x => x.FromTime)
+                                    </div>
+                                </div>
+                                <div class="col-lg-2 FromUptoTimeDivId">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.UptoTime, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.UptoTime, new { @class = "form-control form-time", type = "time" })
+                                        @Html.ValidationMessageFor(x => x.UptoTime)
+                                    </div>
+                                </div>
                                 <div class="row">
-                                    <div class="col-lg-4">
-                                        <div class="mb-3" id="FromTimeDivId" style="@displayFromTimeDiv">
-                                            @Html.LabelFor(x => x.FromTime, new { @class = "form-label" })
-                                            @Html.TextBoxFor(x => x.FromTime, new { @class = "form-control", type = "time", @readonly = "true" })
-                                            @Html.ValidationMessageFor(x => x.FromTime)
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-4">
-                                        <div class="mb-3" id="UptoTimeDivId" style="@displayFromTimeDiv">
-                                            @Html.LabelFor(x => x.UptoTime, new { @class = "form-label" })
-                                            @Html.TextBoxFor(x => x.UptoTime, new { @class = "form-control", type = "time", @readonly = "true" })
-                                            @Html.ValidationMessageFor(x => x.UptoTime)
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-lg-4">
-                                            <div class="mb-3">
-                                                @Html.LabelFor(x => x.Remark, new { @class = "form-label" })
-                                                @Html.TextAreaFor(x => x.Remark, new { @class = "form-control", @maxlength = "150" })
-                                                <div id="charCount" class="mb-3 text-end">0/150</div>
-                                            </div>
+                                    <div class="col-lg-6">
+                                        <div class="mb-3">
+                                            @Html.LabelFor(x => x.Remark, new { @class = "form-label" })
+                                            @Html.TextAreaFor(x => x.Remark, new { @class = "form-control", @maxlength = "500" })
                                         </div>
                                     </div>
                                 </div>
@@ -123,9 +120,8 @@
 
 <!-- Your custom scripts -->
 @Html.Partial("_ValidationScriptsPartial")
+<script src="~/js/coditech/hms/hospitaldoctorleaveschedule.js"></script>
 <script src="~/js/layout/daterangepicker.js"></script>
-<script src="~/js/coditech/gym/gymmemberdetails.js"></script>
-
 @section scripts {
     <script>
         $(function () {
@@ -135,47 +131,45 @@
                 showWeekNumbers: false,
                 drops: "auto",
                 opens: "right",
-                autoApply: false,
+                autoApply: true,
                 "locale": {
-                    // "format": "DD-MM-YYYY",
-                    "separator": " - ",
-                    "applyLabel": "Apply",
-                    "cancelLabel": "Cancel",
-                    "fromLabel": "From",
-                    "toLabel": "To",
-                    "customRangeLabel": "Custom",
-                    "weekLabel": "W",
-                    "daysOfWeek": [
-                        "Su",
-                        "Mo",
-                        "Tu",
-                        "We",
-                        "Th",
-                        "Fr",
-                        "Sa"
-                    ],
-                    "monthNames": [
-                        "January",
-                        "February",
-                        "March",
-                        "April",
-                        "May",
-                        "June",
-                        "July",
-                        "August",
-                        "September",
-                        "October",
-                        "November",
-                        "December"
-                    ],
-                    "firstDay": 1
-                },
-                minYear: 1901,
-                maxYear: parseInt(moment().format('YYYY'), 10)
-            },
-                function (start, end, label) { });
-        });
+        @* "format": "DD-MM-YYYY", *@
+                "separator": " - ",
+                "applyLabel": "Apply",
+                "cancelLabel": "Cancel",
+                "fromLabel": "From",
+                "toLabel": "To",
+                "customRangeLabel": "Custom",
+                "weekLabel": "W",
+                "daysOfWeek": [
+                "Su",
+                "Mo",
+                "Tu",
+                "We",
+                "Th",
+                "Fr",
+                "Sa"
+            ],
+                "monthNames": [
+                "January",
+                "February",
+                "March",
+                "April",
+                "May",
+                "June",
+                "July",
+                "August",
+                "September",
+                "October",
+                "November",
+                "December"
+            ],
+                "firstDay": 1
+                                                            },
+            minYear: new Date().getFullYear(),
+            maxYear: new Date().getFullYear() + 1
+                                                        },
+            function (start, end, label) { });
+                                                    });
     </script>
 }
-
-
