--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorLeaveSchedule/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorLeaveSchedule/CreateEdit.cshtml
@@ -77,7 +77,7 @@
                                         @Html.ValidationMessageFor(x => x.LeaveDate)
                                     </div>
                                 </div>
-                                <div class="col-lg-1">
+                                <div class="col-lg-2">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.IsFullDay, new { @class = "form-label required" })
                                         <div class="form-check">
@@ -85,14 +85,14 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-2 FromUptoTimeDivId">
+                                <div class="col-lg-2 FromUptoTimeDivId" style="@displayFromTimeDiv">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.FromTime, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.FromTime, new { @class = "form-control form-time", type = "time" })
                                         @Html.ValidationMessageFor(x => x.FromTime)
                                     </div>
                                 </div>
-                                <div class="col-lg-2 FromUptoTimeDivId">
+                                <div class="col-lg-2 FromUptoTimeDivId" style="@displayFromTimeDiv">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.UptoTime, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.UptoTime, new { @class = "form-control form-time", type = "time" })
