--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrewiseUserNameRegistration.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrewiseUserNameRegistration.cshtml
@@ -30,21 +30,27 @@
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="mb-3">
+                                            @Html.LabelFor(x => x.CentreName, new { @class = "form-label " })
+                                            @Html.TextBoxFor(x => x.CentreName, new { @class = "form-control", @disabled = "disabled" })
+                                            @Html.ValidationMessageFor(x => x.CentreName)
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="mb-3">
                                             @Html.LabelFor(x => x.CentreCode, new { @class = "form-label " })
                                             @Html.TextBoxFor(x => x.CentreCode, new { @class = "form-control", @disabled = "disabled" })
                                             @Html.ValidationMessageFor(x => x.CentreCode)
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
-                                        <div class="mb-3">
-                                            @Html.LabelFor(x => x.UserType, new { @class = "form-label required" })
-                                            @Html.TextBoxFor(x => x.UserType, new { @class = "form-control", @readonly = "readonly" })
-                                        </div>
+                                        @Html.LabelFor(x => x.UserType, new { @class = "form-label required" })
+                                        @Html.DropDownList("UserType", ViewData["UserType"] as List<SelectListItem>, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.UserType)
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="mb-3">
                                             @Html.LabelFor(x => x.UserNameBasedOn, new { @class = "form-label required" })
-                                            @Html.TextBoxFor(x => x.UserNameBasedOn, new { @class = "form-control"})
+                                            @Html.DropDownList("UserNameBasedOn", ViewData["UserNameBasedOn"] as List<SelectListItem>, new { @class = "form-control" })
                                             @Html.ValidationMessageFor(x => x.UserNameBasedOn)
                                         </div>
                                     </div>
